* More fixes so it works on Safari

--- a/demo/tetris/tetris.css
+++ b/demo/tetris/tetris.css
@@ -10,7 +10,7 @@ body {
 
 #tetris {
     display: flex;
-    width: 540px;
+    width: 560px;
     margin: 3em auto;
 }
 
@@ -20,19 +20,25 @@ body {
 }
 
 #info {
-    display: grid;
-    grid-row-gap: 0.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     height: 470px;
-    grid-template-rows: 2fr 1fr 1fr 1fr 6.5fr 1fr;
 }
 
 #info > #logo {
-    grid-row: 1;
+    flex-basis: auto;
+    margin-top: 7px;
+    padding: 5px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #b8caf4;
 }
 
 #info > #score-envelope {
-    grid-row: 2;
-    border: 2px solid grey;
+    flex-basis: 8%;
+    border: 2px solid #B0B0B0;
     border-radius: 5px;
     display: flex;
     align-items: center;
@@ -40,8 +46,8 @@ body {
 }
 
 #info > #level-envelope {
-    grid-row: 3;
-    border: 2px solid grey;
+    flex-basis: 8%;
+    border: 2px solid #B0B0B0;
     border-radius: 5px;
     display: flex;
     align-items: center;
@@ -49,8 +55,8 @@ body {
 }
 
 #info > #status-envelope {
-    grid-row: 4;
-    border: 2px solid grey;
+    flex-basis: 8%;
+    border: 2px solid #B0B0B0;
     border-radius: 5px;
     display: flex;
     align-items: center;
@@ -58,26 +64,51 @@ body {
 }
 
 #info > #controls-envelope {
-    grid-row: 5;
-    border: 2px solid grey;
+    flex-basis: auto;
+    border: 2px solid #B0B0B0;
     border-radius: 5px;
-    padding-top: 0.5em;
+    padding: 0.5em 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 #info > #btn-reset {
-    grid-row: 6;
+    flex-basis: auto;
 }
 
-#controls > p {
-    border-radius: 5px;
-    background: #b8caf4;
+.button {
     margin: 0.4em;
-    padding: 0.5em;
+    padding: 0.7em 1em;
+    text-align: center;
     cursor: pointer;
-    box-shadow: 0.05em 0.1em rgba(0, 0, 0, 0.1);
+    outline: none;
+    color: #fff;
+    font-weight: bold;
+    background-color: #537fe4;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 2px #999;
+  }
+
+.button:hover {
+    background-color: #2B60DE;
+}
+
+.button:active {
+    background-color: #2B60DE;
+    box-shadow: 0 3px #888;
+    transform: translateY(2px);
+}
+
+#controls > .one-btn {
+    display: flex;
+    justify-content: center;
+}
+
+#controls > .two-btn {
+    display: flex;
+    justify-content: space-between;
 }
 
 .label {
@@ -91,17 +122,9 @@ body {
     display: flex;
     width: 540px;
     margin: -40px auto;
-    
 }
 
-input{
-    border: 0;
-    width: 70%;
-    font-size: 16px;
-    font-weight: bold;
-}
-
-button{
+.btn-primary{
     background: #2B60DE;
     color: #eee;
     font-weight: bold;
@@ -111,4 +134,14 @@ button{
     border-radius: 5px;
     text-transform: uppercase;
     font-size: 14px;
+    cursor: pointer;
+}
+
+.btn-primary:hover {
+    background-color: #1e4fc2;
+}
+
+.btn-primary:active {
+    background-color: #1e4fc2;
+    transform: translateY(2px);
 }
